# my_openenv_project

./: .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.sh  validate-submission.sh
docs/superpowers/plans/: 2026-04-12-fix-end-to-end.md
docs/superpowers/specs/: 2026-04-12-fix-end-to-end-design.md
server/: app.py
src/: environment.py  models.py
