[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email triage agent for OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"